// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardListItem CardListItemの初期値(linkあり): dummyCardsLink 1`] = `
"<div>
  <article class=\\"card-list-item\\">
    <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--lg\\">
      <div class=\\"card-list-item__border\\"></div>
      <figcaption>
        <h2 class=\\"card-title\\">ダミータイトル</h2>
        <p class=\\"base-text base-text--card\\">詳細</p>
      </figcaption>
    </figure> <button class=\\"btn\\">
      WebSite
    </button>
  </article>
</div>"
`;

exports[`CardListItem CardListItemの初期値(linkなし): dummyCards 1`] = `
"<div>
  <article class=\\"card-list-item\\">
    <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card-img card-img--sm\\">
      <div class=\\"card-list-item__border\\"></div>
      <figcaption>
        <h2 class=\\"card-title\\">ダミータイトル</h2>
        <p class=\\"base-text base-text--card\\">詳細</p>
      </figcaption>
    </figure>
    <!---->
  </article>
</div>"
`;

exports[`NavBar ナビゲーションバーを閉じる 1`] = `
"<div>
  <div class=\\"nav-bar\\">
    <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"nav-logo\\">ダミーテキスト</a>
      <div>
        <div class=\\"nav-icon\\"><span class=\\"nav-icon__top nav-icon__top--close\\"></span> <span class=\\"nav-icon__middle\\"></span> <span class=\\"nav-icon__bottom nav-icon__bottom--close\\"></span></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NavBar ナビゲーションバーを開く 1`] = `
"<div>
  <div class=\\"nav-bar\\">
    <div class=\\"nav-bar__box\\"><a href=\\"/\\" class=\\"nav-logo\\">ダミーテキスト</a>
      <div>
        <div class=\\"nav-icon\\"><span class=\\"nav-icon__top nav-icon__top--open\\"></span> <span class=\\"nav-icon__middle nav-icon__middle--fade\\"></span> <span class=\\"nav-icon__bottom nav-icon__bottom--open\\"></span></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NavList isOpenがfalseの時に\`.nav-list\`が非表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\" style=\\"display: none;\\">
      <ul>
        <div>
          <li class=\\"nav-list-item\\"><a class=\\"nav-list-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav-img\\">
              <p class=\\"base-text base-text--nav\\">Top</p>
            </a></li>
        </div>
      </ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`NavList isOpenがtrueの時に\`.nav-list\`が表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav-list\\">
      <ul>
        <div>
          <li class=\\"nav-list-item\\"><a class=\\"nav-list-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav-img\\">
              <p class=\\"base-text base-text--nav\\">Top</p>
            </a></li>
        </div>
      </ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`NavListItem 値がDOMに反映されているか 1`] = `
"<div>
  <li class=\\"nav-list-item\\"><a class=\\"nav-list-item__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav-img\\">
      <p class=\\"base-text base-text--nav\\">Top</p>
    </a></li>
</div>"
`;
